fixed alignment

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body{
     font-size:1em;
     font-family: 'SemplicitaPro';
     color: white;
+    margin-right: 15px;
 }
 
 .landing-side a{
@@ -191,11 +192,12 @@ body{
 .loginscreen{
     position: absolute;
     background-color: white;
-    width: 30vw;
+    width: 35vw;
     left:10vw;
     top:14vh;
     padding-bottom: 30px;
-    border-radius: 20px;
+    border-radius: 40px;
+    box-shadow: 4px 4px 20px 10px rgba(0, 0, 0, 0.25);
 }
 
 .loginimage{
@@ -208,5 +210,11 @@ body{
 }
 
 .logintext{
-    margin-left: 20px;
+    margin-left: 30px;
 }
+
+.loginbody{
+    background-color: #617199;
+}
+
+
